devscripts (2.9.14) unstable; urgency=low

  * deb-reversion: correctly handle multiword hooks (Closes: #351250)
  * deb-reversion: die if not being run as root or using fakeroot
  * deb-reversion: major improvements to manpage
  * debchange: fall back on NAME envvar if DEBFULLNAME is not defined
    (Closes: #340292)
  * uscan: always pass --no-symlink to uupdate as uscan does the
    symlinking itself (Closes: #345874)
  * uscan: handle multi-word actions

 -- Julian Gilbey <jdg@debian.org>  Mon, 13 Feb 2006 11:10:30 +0000

devscripts (2.9.13) unstable; urgency=low

  * Don't include .svn directory in md5sums (Closes: #352273)
  * bts: fix new caching code (thanks to Frank Lichtenheld for this one)
    (Closes: #352476)
  * bts: correctly handle DEBEMAIL='Name <email>' (Closes: #342883)
  * debcommit: handle commit messages for git-based setups (Closes:
    #352004)
  * uscan: check sanity of downloaded files (Closes: #303958)

 -- Julian Gilbey <jdg@debian.org>  Sun, 12 Feb 2006 12:46:22 +0000

devscripts (2.9.12) unstable; urgency=low

  [ Julian Gilbey ]
  * bts: show/bugs: update to recognise new URL formats in BTS pages
    (based on bug #349259)
  * bts: show/bugs: allow options with from:<submitter> etc. to work
    correctly (Closes: #345464)
  * bts: accept "submitter nnnnn !" format (Closes: #348349)
  * debchange: update to recognise new URL formats in BTS pages (Closes:
    #349259)
  * debchange: quitting the editor with -e option and no changes no longer
    modifies the changelog (Closes: #349091)
  * debuild: dpkg-buildpackage -> dpkg-buildpackage(1) in EXAMPLES section
    of manpage (Closes: #351363)
  * nmudiff: include in package (Closes: #349337)
  * nmudiff: improved old version code from Steinar using supplied patch
    (Closes: #351791)

  [ Joey Hess ]
  * Add rmadison program by Christoph Berg. Closes: #350335

  [ Nicolas François ]
  * Makefile
    build the man pages in the `all' rule